apps/media/bazarr/bazarr-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bazarr-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/bazarr"
